--- a/apps/svelte/src/app.html
+++ b/apps/svelte/src/app.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="dark">
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
@@ -7,7 +7,10 @@
 		<script src="./node_modules/preline/dist/preline.js"></script>
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover">
+	<body
+		data-sveltekit-preload-data="hover"
+		class="bg-gray-50 dark:bg-neutral-900"
+	>
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
