--- a/apps/svelte/src/app.html
+++ b/apps/svelte/src/app.html
@@ -4,12 +4,17 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<script src="./node_modules/preline/dist/preline.js"></script>
+		<script src="%sveltekit.assets%/preline/preline.js"></script>
+		<!-- <link -->
+		<!-- 	rel="stylesheet" -->
+		<!-- 	href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" -->
+		<!-- /> -->
+		<!-- <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script> -->
 		%sveltekit.head%
 	</head>
 	<body
 		data-sveltekit-preload-data="hover"
-		class="bg-gray-50 dark:bg-neutral-900"
+		class="h-full min-h-screen bg-gray-100 dark:bg-neutral-800"
 	>
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
